# HiKCamera

./: .gitignore  CMakeLists.txt  readme.md
app/: CMakeLists.txt  CameraPluginConsole.cpp
src/: CMakeLists.txt  HiKCamera.cpp  HiKCamera.h  HiKCameraFactory.cpp  HiKCameraFactory.h
